Updating repo with current code

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,24 +1,20 @@
-.App {
-  text-align: center;
+
+
+.navbar{
+    background-color: #6e879c
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.navbar a{
+    color: black;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.jumbotron{
+    background-color: #ACD492;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.card{
+    max-width: 850px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
 }
